upgraded ember and added ember-rest

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     
     {{#collection contentBinding="VoteList.CandidateController.sortedContent" tagname="ul" id="CandidateList"}}
       {{#view VoteList.CandidateView personBinding="content"}}
-        {{person.name}}: {{person.score}}
+        {{person.displayName}}: {{person.score}}
         {{view SC.Button class="upvote" target="parentView" action="upvote"}}
         {{view SC.Button class="downvote" target="parentView" action="downvote"}}
       {{/view}}
