--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,13 @@
 </head>
 <body>
 
-	<%= yield %>
+  <div class="container">
+    <div class="row">
+      <div class="span12 offset2">
+        <%= yield %>
+      </div>
+    </div>
+  </div>
 
 	<%= javascript_include_tag "application" %>
 </body>
